--- a/sandbox/9-remoting/src/Remoting.Server/Remoting.Server.fsproj
+++ b/sandbox/9-remoting/src/Remoting.Server/Remoting.Server.fsproj
@@ -1,18 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="WeatherForecast.fs" />
     <Compile Include="Controllers/WeatherForecastController.fs" />
+    <Compile Include="Handlers/SimpleServiceHandler.fs" />
     <Compile Include="Startup.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Bolero.Server" Version="0.17.25" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Remoting.Contracts\Remoting.Contracts.fsproj" />
+  </ItemGroup>
 </Project>
