--- a/sandbox/9-remoting/src/Remoting.Client/Remoting.Client.Client.fsproj
+++ b/sandbox/9-remoting/src/Remoting.Client/Remoting.Client.Client.fsproj
@@ -12,4 +12,7 @@
     <PackageReference Include="Bolero.Build" Version="0.*" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.*" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Remoting.Contracts\Remoting.Contracts.fsproj" />
+  </ItemGroup>
 </Project>
